2006-11-22  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (subscriptions): Basic GET access to /subscriptions/
	should return the OPML file.  Other methods of access to the same
	URL are now handled by change_subscriptions.
	(change_subscriptions): Handle modifications to the user's subscriptions.

	* urls.py (urlpatterns): Remove feed_list since it is no longer used.

	* templates/user.html: Add link to OPML file for subscriptions.

	* templates/subscriptions.opml: Template for OPML list of subscriptions.

	* download_cache.py (retrieve_feed): If we cannot create the cache
	output file, log the error and return the data.

2006-11-13  Doug Hellmann  <dhellmann@racemi.com>

	* download_cache.py (retrieve_feed): Update the user-agent string
	to indicate that castsampler is a domain.

2006-11-12  Doug Hellmann  <dhellmann@racemi.com>

	* models.py (QueueItem.as_dict): Include the pubdate for the item.

	* download_cache.py (retrieve_feed): Do a little better job with
	error handling when we try to write the cache.

	* templates/popular_subscription_list.html: Template for the
	popular_subscription_list tag.

	* templates/newest_subscription_list.html: Template for the
	newest_subscription_list tag.

	* templatetags/subscription_list_tags.py
	(newest_subscription_list): Template tag to show a list of the
	most recently subscribed podcasts.
	(popular_subscription_list): Template tag to show a list of the
	most popular podcasts.

	* views.py: Move some of the main views to the site-wide views module.

	* templates/index.html: Update the formatting of the "login or
	register" invitation section of the home page.

2006-11-11  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (user): Include json representations of queue and
	subscriptions in the data passed to the template.

	* templates/user.html: Add some JavaScript to remember the initial
	state of the queue and subscriptions list.  We use this data to